# strategic-lifecycle-ai-framework

./: index.html  manifest.webmanifest  ojies-template.tex
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  architecture_core.py  architecture_supporting.py  auth.py  business_cases.py  departments.py  deps.py  discovery.py  implementation.py  invites.py  solution.py  strategy.py  workspaces.py
backend/app/core/: config.py  errors.py  middleware.py  pagination.py  rate_limit.py  security.py
backend/app/models/: __init__.py  _columns.py  base.py  business_architecture_components.py  business_capabilities.py  business_impacts.py  business_processes.py  conceptual_deliverables.py  departments.py  discovery.py  discovery_business_processes.py  discovery_information_concepts.py  discovery_stakeholders_personas.py  features.py  implementation.py  implementation_value_streams.py  information_concepts.py  key_activities.py  key_activity_capabilities.py  lean_business_case_capabilities.py  lean_business_case_key_activities.py  lean_business_case_value_streams.py  lean_business_cases.py  mixins.py  refresh_tokens.py  requirements.py  stakeholders_personas.py  strategic_objective_capabilities.py  strategic_objective_metrics.py  strategic_objective_value_streams.py  strategic_objectives.py  users.py  value_stream_capabilities.py  value_streams.py  workspace_invites.py  workspace_members.py  workspaces.py
backend/app/schemas/: __init__.py  architecture_core.py  architecture_supporting.py  auth.py  base.py  business_cases.py  departments.py  discovery.py  implementation.py  solution.py  strategy.py  workspaces.py
backend/app/services/: __init__.py  architecture_supporting_service.py  auth_service.py  business_architecture_service.py  business_case_service.py  capability_service.py  department_service.py  discovery_service.py  implementation_service.py  invite_service.py  key_activity_service.py  lifecycle.py  solution_service.py  strategy_service.py  value_stream_service.py  workspace_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_auth_auth.py  0002_company_company.py  0003_architecture_core_architecture_core.py  0004_architecture_supporting_architecture_supporting.py  0005_strategy_strategy.py  0006_business_case_business_case.py  0007_discovery_discovery.py  0008_solution_solution.py  0009_implementation_implementation.py  0010_reference_fks_set_null.py
backend/tests/: conftest.py  smoke_schema.py  test_architecture_core.py  test_architecture_supporting.py  test_auth.py  test_business_cases.py  test_departments.py  test_discovery.py  test_hardening.py  test_implementation.py  test_smoke_schema.py  test_solution.py  test_strategy.py  test_workspaces.py
(+51 files in other folders)
